--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     super();
                     this.state = {
                         auth: {},
+                        notes: [],
                     };
                     this.signIn = this.signIn.bind(this);
                     this.logout = this.logout.bind(this);
@@ -81,7 +82,13 @@
                                 authorization: token,
                             },
                         });
-                        this.setState({ auth: response.data });
+                        const notes = await axios.get(
+                            `/api/users/${response.data.id}/notes`
+                        );
+                        this.setState({
+                            auth: response.data,
+                            notes: notes.data,
+                        });
                     }
                 }
                 componentDidMount() {
@@ -96,13 +103,28 @@
                 render() {
                     const { auth } = this.state;
                     const { signIn, logout } = this;
+                    const notes = this.state.notes;
+                    console.log(this.state.notes);
                     if (!auth.id) {
                         return <SignIn signIn={signIn} />;
                     } else {
                         return (
                             <div>
-                                Welcome {auth.username}
-                                <button onClick={logout}>Logout</button>
+                                <div>
+                                    Welcome {auth.username}
+                                    <button onClick={logout}>Logout</button>
+                                </div>
+                                <div>
+                                    <ul>
+                                        {notes.map((note) => {
+                                            return (
+                                                <li key={note.id}>
+                                                    {note.text}
+                                                </li>
+                                            );
+                                        })}
+                                    </ul>
+                                </div>
                             </div>
                         );
                     }
